fix: removes `custom-cursor` on mobile screens

--- a/src/global.css
+++ b/src/global.css
@@ -36,13 +36,11 @@
 html {
   scroll-behavior: smooth;
   background-attachment: scroll;
-  overflow: hidden;
 }
 
 html.lenis {
   height: auto;
 }
-
 
 body {
   color: #333;
